# asn1-conv

./: .gitattributes  .gitignore  .pylintrc  AUTHORS  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
etc/: OBSessionOpenData_err.json  OBSessionOpenData_err.json.license  OBSessionOpenData_ok.json  OBSessionOpenData_ok.json.license  schema.asn
src/: asn1Conv.py  asn1Test.py
test/: choice.asn  componentsOf.asn  enum.asn  intType.asn  numType.asn  podTypes.asn  sequence.asn  sequenceOf.asn  set.asn  setOf.asn  strTypes.asn  withComponents1.asn  withComponents2.asn  withComponents3.asn
